--- a/mesos-master/Dockerfile
+++ b/mesos-master/Dockerfile
@@ -3,6 +3,7 @@ MAINTAINER Mark O'Connor <mark@myspotontheweb.com>
 
 EXPOSE 5050
 
-CMD ["--zk=zk://zookeeper:2181/mesos", "--work_dir=/var/lib/mesos", "--quorum=1"]
+RUN echo "zk://zookeeper:2181/mesos" > /etc/mesos/zk
+ADD supervisord.conf /etc/supervisor/supervisord.conf
 
-ENTRYPOINT ["mesos-master"]
+ENTRYPOINT ["supervisord"]
