--- a/haproxy/supervisord.conf
+++ b/haproxy/supervisord.conf
@@ -10,7 +10,8 @@ stdout_events_enabled = true
 stderr_events_enabled = true
 
 [program:haproxy_configurator]
-command=/bin/true 
+command=consul-haproxy -in in.conf -out /etc/haproxy/haproxy.cfg -addr=%(ENV_MASTER_HOST)s:8500 -backend "c=consul@%(ENV_DC)s" -reload "reload haproxy"
+
 autorestart=true
 user=root
 stdout_events_enabled = true
