--- a/haproxy/supervisord.conf
+++ b/haproxy/supervisord.conf
@@ -2,7 +2,7 @@
 nodaemon=true
 
 [program:haproxy]
-command=/opt/haproxy/haproxy.sh
+command=/etc/init.d/haproxy restart
 
 autorestart=true
 user=root
@@ -10,7 +10,7 @@ stdout_events_enabled = true
 stderr_events_enabled = true
 
 [program:haproxy_configurator]
-command=consul-haproxy -in in.conf -out /etc/haproxy/haproxy.cfg -addr=%(ENV_MASTER_HOST)s:8500 -backend "c=consul@%(ENV_DC)s" -reload "reload haproxy"
+command=/opt/consul_haproxy/consul-haproxy -in in.conf -out /etc/haproxy/haproxy.cfg -addr=%(ENV_MASTER_IP)s:8500 -backend c=consul@%(ENV_DC)s:8500 -reload "/etc/init.d/haproxy reload"
 
 autorestart=true
 user=root
