--- a/consul/supervisord.conf
+++ b/consul/supervisord.conf
@@ -1,6 +1,18 @@
 [supervisord]
 nodaemon=true
 
+[unix_http_server]
+file=/tmp/supervisor.sock
+
+[inet_http_server]
+port=:9001
+
+[supervisorctl]
+serverurl=unix:///tmp/supervisor.sock
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
 [program:consul]
 command=/opt/consul/consul agent -client=0.0.0.0 -data-dir=/opt/consul/ -ui-dir=/opt/consul/dist/ -config-dir=/etc/consul.d/ -advertise %(ENV_MASTER_IP)s -node=%(ENV_MASTER_HOST)s -dc=%(ENV_DC)s %(ENV_CONSUL_MODE)s %(ENV_CONSUL_BOOTSTRAP)s
 autorestart=true
