--- a/haproxy/supervisord.conf
+++ b/haproxy/supervisord.conf
@@ -1,21 +1,38 @@
 [supervisord]
 nodaemon=true
 
-[program:haproxy]
-command=/etc/init.d/haproxy restart
+[unix_http_server]
+file=/tmp/supervisor.sock
 
+[inet_http_server]
+port=:9001
+
+[supervisorctl]
+serverurl=unix:///tmp/supervisor.sock
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
+[program:haproxy]
+command=/usr/sbin/haproxy -db -f /etc/haproxy/haproxy.cfg
 autorestart=true
 user=root
 stdout_events_enabled = true
 stderr_events_enabled = true
 
 [program:haproxy_configurator]
-command=/opt/consul_haproxy/consul-haproxy -in in.conf -out /etc/haproxy/haproxy.cfg -addr=%(ENV_MASTER_IP)s:8500 -backend c=consul@%(ENV_DC)s:8500 -reload "/etc/init.d/haproxy reload"
-
+command=/opt/consul_haproxy/consul-haproxy -in in.conf -out /etc/haproxy/haproxy.cfg -addr=%(ENV_MASTER_IP)s:8500 -backend c=consul@%(ENV_DC)s:8500 -reload "/usr/bin/supervisorctl restart haproxy"
 autorestart=true
 user=root
 stdout_events_enabled = true
 stderr_events_enabled = true
+
+; [program:sshd]
+; command=/usr/sbin/sshd -D
+; autorestart=true
+; user=root
+; stdout_events_enabled = true
+; stderr_events_enabled = true
 
 [eventlistener:stdout] 
 command = supervisor_stdout 
