--- a/mesos-master/supervisord.conf
+++ b/mesos-master/supervisord.conf
@@ -1,6 +1,18 @@
 [supervisord]
 nodaemon=true
 
+[unix_http_server]
+file=/tmp/supervisor.sock
+
+[inet_http_server]
+port=:9001
+
+[supervisorctl]
+serverurl=unix:///tmp/supervisor.sock
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
 [program:mesos-master]
 command=mesos-master --zk=zk://zookeeper:2181/mesos --work_dir=/var/lib/mesos --quorum=1
 autorestart=true
