--- a/consul/supervisord.conf
+++ b/consul/supervisord.conf
@@ -14,7 +14,7 @@ serverurl=unix:///tmp/supervisor.sock
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [program:consul]
-command=/opt/consul/consul agent -client=0.0.0.0 -data-dir=/opt/consul/ -ui-dir=/opt/consul/dist/ -config-dir=/etc/consul.d/ -advertise %(ENV_MASTER_IP)s -node=%(ENV_MASTER_HOST)s -dc=%(ENV_DC)s %(ENV_CONSUL_MODE)s %(ENV_CONSUL_BOOTSTRAP)s
+command=/opt/consul/consul agent -client=0.0.0.0 -data-dir=/opt/consul/ -ui-dir=/opt/consul/dist/ -config-dir=/etc/consul.d/ -advertise=%(ENV_MASTER_IP)s -node=%(ENV_MASTER_HOST)s -dc=%(ENV_DC)s %(ENV_CONSUL_MODE)s %(ENV_CONSUL_BOOTSTRAP)s
 autorestart=true
 user=root
 stdout_events_enabled = true
