--- a/examples/SimpleWebappPython/simple_webapp_python/Dockerfile
+++ b/examples/SimpleWebappPython/simple_webapp_python/Dockerfile
@@ -11,9 +11,11 @@ WORKDIR /opt/web
 ADD ./index.html /opt/web/
 ADD ./cgi-bin/index /opt/web/cgi-bin/
 RUN chmod a+x /opt/web/cgi-bin/index 
+
+ADD ./register.tmpl /opt/web/
 ADD ./register_and_start.sh /opt/web/
 RUN chmod a+x /opt/web/register_and_start.sh
 
 EXPOSE 8000
 
-ENTRYPOINT [ "/opt/web/register_and_start.sh" ]
+ENTRYPOINT [ "/bin/bash", "-c", "/opt/web/register_and_start.sh" ]
