--- a/haproxy/supervisord.conf
+++ b/haproxy/supervisord.conf
@@ -13,6 +13,13 @@ serverurl=unix:///tmp/supervisor.sock
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
+[program:haproxy-marathon-bridge]
+command=/opt/haproxy/haproxy-marathon-bridge-wrapper.sh
+autorestart=true
+user=root
+stdout_events_enabled = true
+stderr_events_enabled = true
+
 [program:haproxy]
 command=/usr/sbin/haproxy -db -f /etc/haproxy/haproxy.cfg
 autorestart=true
