hostname naming, fix healthChecks
Due to hostname issues (same hostname in container and host system) marathon was unable to perform healthchecks.

--- a/dnsmasq/supervisord.conf
+++ b/dnsmasq/supervisord.conf
@@ -13,8 +13,8 @@ serverurl=unix:///tmp/supervisor.sock
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
-[program:openvpn]
-command=/usr/sbin/dnsmasq -d -u dnsmasq -r /etc/resolv.conf -7 /etc/dnsmasq.d --server=/consul/%(ENV_MASTER_IP)s#8600 --server=%(ENV_MASTER_IP)s
+[program:dnsmasq]
+command=/usr/sbin/dnsmasq -d -u dnsmasq -r /etc/resolv.conf -7 /etc/dnsmasq.d --server=/consul/%(ENV_MASTER_IP)s#8600 --server=%(ENV_MASTER_IP)s --host-record=%(ENV_MASTER_HOSTNAME)s,%(ENV_MASTER_IP)s
 autorestart=true
 user=root
 stdout_events_enabled = true
