--- a/mesos-master/supervisord.conf
+++ b/mesos-master/supervisord.conf
@@ -14,14 +14,14 @@ serverurl=unix:///tmp/supervisor.sock
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [program:mesos-master]
-command=mesos-master --zk=zk://zookeeper:2181/mesos --work_dir=/var/lib/mesos --quorum=1
+command=mesos-master --zk=zk://%(ENV_ZOOKEEPER_HOSTS)s/mesos --work_dir=/var/lib/mesos --quorum=1 --hostname=%(ENV_MASTER_HOST)s
 autorestart=true
 user=root
 stdout_events_enabled = true
 stderr_events_enabled = true
 
 [program:marathon]
-command=marathon
+command=marathon --master zk://%(ENV_ZOOKEEPER_HOSTS)s/mesos --zk zk://%(ENV_ZOOKEEPER_HOSTS)s/marathon --hostname %(ENV_MASTER_HOST)s
 autorestart=true
 user=root
 stdout_events_enabled = true
