--- a/dnsmasq/supervisord.conf
+++ b/dnsmasq/supervisord.conf
@@ -14,7 +14,7 @@ serverurl=unix:///tmp/supervisor.sock
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [program:dnsmasq]
-command=/usr/sbin/dnsmasq -d -u dnsmasq -r /etc/resolv.conf -7 /etc/dnsmasq.d --server=/consul/%(ENV_MASTER_IP)s#8600 --server=%(ENV_MASTER_IP)s --host-record=%(ENV_MASTER_HOSTNAME)s,%(ENV_MASTER_IP)s
+command=/usr/sbin/dnsmasq -d -u dnsmasq -r /etc/resolv.conf -7 /etc/dnsmasq.d --server=/consul/%(ENV_MASTER_IP)s#8600 --address=/consul/%(ENV_MASTER_IP)s --host-record=%(ENV_MASTER_HOSTNAME)s,%(ENV_MASTER_IP)s
 autorestart=true
 user=root
 stdout_events_enabled = true
