--- a/infrastructure/haproxy/in.conf
+++ b/infrastructure/haproxy/in.conf
@@ -24,15 +24,21 @@ defaults
     errorfile 503 /etc/haproxy/errors/503.http
     errorfile 504 /etc/haproxy/errors/504.http
 
+listen stats :81
+    mode http
+    stats enable
+    stats hide-version
+    stats realm Haproxy\ Statistics
+    stats uri /
+
 frontend http-in
     bind *:80
 
-    acl {{ range $index,$element := .c }}{{ if eq $index 0 }} acl_{{ .Service }} hdr(host) -i paas44-1.mobile.rz {{end}}{{end}}
-    use_backend {{ range $index,$element := .c }}{{ if eq $index 0 }} backend_{{ .Service }} if acl_{{ .Service }}  {{ end }} {{end}}
-
-backend {{ range $index,$element := .c }}{{ if eq $index 0 }}backend_{{ .Service }}  {{ end }} {{end}}
-    balance leastconn
-    option httpclose
-    {{range .c}}
-    {{.}} maxconn 32{{end}}
-
+    {{range $tag, $services := service "webapp" | byTag }}acl acl_{{$tag}} hdr(host) -i {{$tag}}.service.consul
+    use_backend backend_{{$tag}} if acl_{{$tag}}
+    {{end}}
+    {{range $tag, $services := service "webapp" | byTag }}backend backend_{{$tag}}
+      balance leastconn
+      option httpclose
+    {{range $services}}  server {{.Name}} {{.Address}}:{{.Port}} maxconn 32
+    {{end}}{{end}}
