--- a/infrastructure/haproxy/supervisord.conf
+++ b/infrastructure/haproxy/supervisord.conf
@@ -13,13 +13,6 @@ serverurl=unix:///tmp/supervisor.sock
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
-[program:haproxy-marathon-bridge]
-command=/opt/haproxy/haproxy-marathon-bridge-wrapper.sh
-autorestart=true
-user=root
-stdout_events_enabled = true
-stderr_events_enabled = true
-
 [program:haproxy]
 command=/usr/sbin/haproxy -db -f /etc/haproxy/haproxy.cfg
 autorestart=true
@@ -28,7 +21,7 @@ stdout_events_enabled = true
 stderr_events_enabled = true
 
 [program:haproxy_configurator]
-command=/opt/consul_haproxy/consul-haproxy -in in.conf -out /etc/haproxy/haproxy.cfg -addr=%(ENV_MASTER_IP)s:8500 -backend c=consul@%(ENV_DC)s:8500 -reload "/usr/bin/supervisorctl restart haproxy"
+command=./consul-template -template "in.conf:/etc/haproxy/haproxy.cfg:/usr/sbin/haproxy -f /etc/haproxy/haproxy.cfg -sf $(pidof /usr/sbin/haproxy) || true" -consul=%(ENV_MASTER_IP)s:8500
 autorestart=true
 user=root
 stdout_events_enabled = true
