--- a/infrastructure/haproxy/haproxy.cfg
+++ b/infrastructure/haproxy/haproxy.cfg
@@ -1,27 +1,35 @@
 global
-  log 127.0.0.1 local0
-  log 127.0.0.1 local1 notice
-  chroot /var/lib/haproxy
-  user haproxy
-  group haproxy
-  # daemon
+    log 127.0.0.1   local0
+    log 127.0.0.1   local1 notice
+    daemon
+    maxconn 256
 
 defaults
-  log global
-  mode http
-  option httplog
-  option dontlognull
-  contimeout 5000
-  clitimeout 50000
-  srvtimeout 50000
-  errorfile 400 /etc/haproxy/errors/400.http
-  errorfile 403 /etc/haproxy/errors/403.http
-  errorfile 408 /etc/haproxy/errors/408.http
-  errorfile 500 /etc/haproxy/errors/500.http
-  errorfile 502 /etc/haproxy/errors/502.http
-  errorfile 503 /etc/haproxy/errors/503.http
-  errorfile 504 /etc/haproxy/errors/504.http
+    mode http
+    timeout connect 5000ms
+    timeout client 60000ms
+    timeout server 60000ms
+    option forwardfor
+    option httplog
+    option dontlognull
+    option forwardfor
+    option http-server-close
+    stats enable
+    stats uri /haproxyStats    
+    errorfile 400 /etc/haproxy/errors/400.http
+    errorfile 403 /etc/haproxy/errors/403.http
+    errorfile 408 /etc/haproxy/errors/408.http
+    errorfile 500 /etc/haproxy/errors/500.http
+    errorfile 502 /etc/haproxy/errors/502.http
+    errorfile 503 /etc/haproxy/errors/503.http
+    errorfile 504 /etc/haproxy/errors/504.http
 
-listen stats :80
-  stats enable
-  stats uri /
+listen stats :81
+    mode http
+    stats enable
+    stats hide-version
+    stats realm Haproxy\ Statistics
+    stats uri /
+
+frontend http-in
+    bind *:80
