External application versioning

--- a/infrastructure/haproxy/Dockerfile
+++ b/infrastructure/haproxy/Dockerfile
@@ -6,23 +6,23 @@ RUN mkdir /opt/consul_template
 RUN mkdir -p /opt/haproxy/mount
 
 ENV HOME /opt/consul_template
-ENV GOPATH /.go
 WORKDIR /opt/consul_template
 
-RUN sed -i 's/^# \(.*-backports\s\)/\1/g' /etc/apt/sources.list \
+RUN . /opt/versions.conf \
+    && sed -i 's/^# \(.*-backports\s\)/\1/g' /etc/apt/sources.list \
     && apt-get update \
     && apt-get install -y \
-    haproxy=1.5.3-1~ubuntu14.04.1 \
-    golang \
-    git
+    haproxy="${HAPROXY_VERSION}"
 
 # HAproxy
 RUN sed -i 's/^ENABLED=.*/ENABLED=1/' /etc/default/haproxy \
     && rm -rf /var/lib/apt/lists/*
 
 # consul-haproxy
-RUN go get -u github.com/hashicorp/consul-template \
-    && cp /.go/bin/consul-template .
+RUN . /opt/versions.conf \
+    && wget https://github.com/hashicorp/consul-template/releases/download/v${CONSUL_TEMPLATE_VERSION}/consul-template_${CONSUL_TEMPLATE_VERSION}_linux_amd64.tar.gz \
+    && tar zxf consul-template_${CONSUL_TEMPLATE_VERSION}_linux_amd64.tar.gz \
+    && ln -s consul-template_${CONSUL_TEMPLATE_VERSION}_linux_amd64/consul-template .
 
 # Add files
 ADD haproxy.cfg /etc/haproxy/haproxy.cfg
