--- a/infrastructure/mesos/Dockerfile
+++ b/infrastructure/mesos/Dockerfile
@@ -3,7 +3,9 @@ MAINTAINER Wojciech Sielski "wsielski@team.mobile.de"
 
 RUN echo "deb http://repos.mesosphere.io/ubuntu/ trusty main" > /etc/apt/sources.list.d/mesosphere.list
 RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv E56151BF
-RUN apt-get update \
+
+RUN . /opt/versions.conf \
+    && apt-get update \
     && apt-get -y install \
-      mesos \
-      marathon 
+      mesos=${MESOS_VERSION} \
+      marathon=${MARATHON_VERSION}
