--- a/infrastructure/registrator/Dockerfile
+++ b/infrastructure/registrator/Dockerfile
@@ -1,8 +1,16 @@
 FROM paas
 MAINTAINER Jonathan Colby "jcolby@team.mobile.de"
 
-ADD https://github.com/progrium/registrator/releases/download/v0.4.0/registrator_0.4.0_linux_x86_64.tgz /tmp/registrator.tgz
-RUN cd /bin && gzip -dc /tmp/registrator.tgz | tar -xf - && rm /tmp/registrator.tgz
+RUN mkdir /opt/registrator
+ENV HOME /opt/registrator
+
+ENV PATH $PATH:/opt/registrator
+WORKDIR /opt/registrator
+
+
+RUN . /opt/versions.conf \
+  && wget https://github.com/progrium/registrator/releases/download/v${REGISTRATOR_VERSION}/registrator_${REGISTRATOR_VERSION}_linux_x86_64.tgz \
+  && tar zxf registrator_${REGISTRATOR_VERSION}_linux_x86_64.tgz
 
 ENV DOCKER_HOST unix:///tmp/docker.sock
-ENTRYPOINT ["/bin/registrator"]
+ENTRYPOINT ["/opt/registrator/registrator"]
