--- a/infrastructure/haproxy/in.conf
+++ b/infrastructure/haproxy/in.conf
@@ -33,12 +33,11 @@ listen stats :81
 
 frontend http-in
     bind *:80
-
-    {{range $tag, $services := service "webapp" | byTag }}acl acl_{{$tag}} hdr(host) -i {{$tag}}.service.consul
-    use_backend backend_{{$tag}} if acl_{{$tag}}
+    {{range services}}acl acl_{{.Name}} hdr(host) -i {{.Name}}.service.consul
+    use_backend backend_{{.Name}} if acl_{{.Name}}
     {{end}}
-    {{range $tag, $services := service "webapp" | byTag }}backend backend_{{$tag}}
+    {{range services }}backend backend_{{.Name}}
       balance leastconn
       option httpclose
-    {{range $services}}  server {{.Name}} {{.Address}}:{{.Port}} maxconn 32
+    {{range service .Name "passing" }}  server {{.Name}} {{.Address}}:{{.Port}} maxconn 32
     {{end}}{{end}}
