HAproxy and mesos master+slave changes
HAproxy: accepts only webapp OR haproxy tag
mesos slave+master: "net: host" since advertise is not working as susspect

--- a/infrastructure/haproxy/in.conf
+++ b/infrastructure/haproxy/in.conf
@@ -2,7 +2,7 @@ global
     log 127.0.0.1   local0
     log 127.0.0.1   local1 notice
     daemon
-    maxconn 256
+    maxconn 1024
 
 defaults
     mode http
@@ -10,12 +10,12 @@ defaults
     timeout client 60000ms
     timeout server 60000ms
     option forwardfor
-    option  httplog
-    option  dontlognull
+    option httplog
+    option dontlognull
     option forwardfor
     option http-server-close
     stats enable
-    stats uri /haproxyStats    
+    stats uri /haproxyStats
     errorfile 400 /etc/haproxy/errors/400.http
     errorfile 403 /etc/haproxy/errors/403.http
     errorfile 408 /etc/haproxy/errors/408.http
@@ -33,11 +33,13 @@ listen stats :81
 
 frontend http-in
     bind *:80
-    {{range services}}acl acl_{{.Name}} hdr(host) -i {{.Name}}.service.consul
-    use_backend backend_{{.Name}} if acl_{{.Name}}
-    {{end}}
-    {{range services }}backend backend_{{.Name}}
+
+{{range services}}{{$service:=.Name}}{{range .Tags}}{{if or (eq . "webapp") (eq . "haproxy")}}
+    acl acl_{{$service}} hdr(host) -i {{$service}}.service.consul
+    use_backend backend_{{$service}} if acl_{{$service}}
+    backend backend_{{$service}}
       balance leastconn
       option httpclose
-    {{range service .Name "passing" }}  server {{.Name}} {{.Address}}:{{.Port}} maxconn 32
-    {{end}}{{end}}
+  {{range service $service "passing" }}    server {{.Name}} {{.Address}}:{{.Port}} maxconn 64
+  {{end}}
+{{end}}{{end}}{{end}}
