--- a/infrastructure/mesos-master/supervisord.conf
+++ b/infrastructure/mesos-master/supervisord.conf
@@ -14,7 +14,7 @@ serverurl=unix:///tmp/supervisor.sock
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [program:mesos-master]
-command=mesos-master --zk=zk://%(ENV_ZOOKEEPER_HOSTS)s/mesos --work_dir=/var/lib/mesos --quorum=1 --hostname=%(ENV_MASTER_HOST)s
+command=mesos-master --zk=zk://%(ENV_ZOOKEEPER_HOSTS)s/mesos --work_dir=/var/lib/mesos --quorum=1 --ip=0.0.0.0 --hostname=%(ENV_MASTER_HOST)s
 autorestart=true
 user=root
 stdout_events_enabled = true
