HAproxy corrections and versions pin up

--- a/infrastructure/haproxy/in.conf
+++ b/infrastructure/haproxy/in.conf
@@ -2,7 +2,9 @@ global
     log 127.0.0.1   local0
     log 127.0.0.1   local1 notice
     daemon
-    maxconn 1024
+    maxconn 8192
+    ulimit-n 65536
+    nbproc  2
 
 defaults
     mode http
@@ -14,6 +16,7 @@ defaults
     option dontlognull
     option forwardfor
     option http-server-close
+    option redispatch
     stats enable
     stats uri /haproxyStats
     errorfile 400 /etc/haproxy/errors/400.http
@@ -37,9 +40,11 @@ frontend http-in
 {{range services}}{{$service:=.Name}}{{range .Tags}}{{if or (eq . "webapp") (eq . "haproxy")}}
     acl acl_{{$service}} hdr(host) -i {{$service}}.service.consul
     use_backend backend_{{$service}} if acl_{{$service}}
+{{end}}{{end}}{{end}}
+{{range services}}{{$service:=.Name}}{{range .Tags}}{{if or (eq . "webapp") (eq . "haproxy")}}
     backend backend_{{$service}}
       balance leastconn
-      option httpclose
-  {{range service $service "passing" }}    server {{.Name}} {{.Address}}:{{.Port}} maxconn 64
+      option http-server-close
+  {{range service $service "passing" }}    server {{.Name}} {{.Address}}:{{.Port}} maxconn 1024
   {{end}}
 {{end}}{{end}}{{end}}
