--- a/infrastructure/paas/versions.conf
+++ b/infrastructure/paas/versions.conf
@@ -2,9 +2,9 @@
 DOCKER_VERSION="1.4.1"
 FIG_VERSION="1.0.1"
 CONSUL_VERSION="0.4.1"
-CONSUL_TEMPLATE_VERSION="0.5.1"
+CONSUL_TEMPLATE_VERSION="0.6.5"
 ENVCONSUL_VERSION="0.3.0"
 HAPROXY_VERSION="1.5.3-1~ubuntu14.04.1"
-MESOS_VERSION="0.21.0-1.0.ubuntu1404"
-MARATHON_VERSION="0.7.6-1.0"
+MESOS_VERSION="0.21.1-1.1.ubuntu1404"
+MARATHON_VERSION="0.8.0-1.1.97.ubuntu1404"
 REGISTRATOR_VERSION="0.4.0"
