Adding checks for consul propagated via registrator

--- a/infrastructure/haproxy/supervisord.conf
+++ b/infrastructure/haproxy/supervisord.conf
@@ -14,14 +14,14 @@ serverurl=unix:///tmp/supervisor.sock
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 ;[program:haproxy]
-;command=/usr/sbin/haproxy -f /etc/haproxy/haproxy.cfg
-;autorestart=false
+;command=/usr/sbin/haproxy -db -f /etc/haproxy/haproxy.cfg
+;autorestart=true
 ;user=root
 ;stdout_events_enabled = true
 ;stderr_events_enabled = true
 
 [program:haproxy_configurator]
-command=./consul-template -template "in.conf:/etc/haproxy/haproxy.cfg:/usr/sbin/haproxy -f /etc/haproxy/haproxy.cfg -sf $(pidof haproxy) || true" -consul=%(ENV_MASTER_IP)s:8500
+command=./consul-template -template "in.conf:/etc/haproxy/haproxy.cfg:/usr/sbin/haproxy -f /etc/haproxy/haproxy.cfg -sf $(pidof /usr/sbin/haproxy) || true" -consul=%(ENV_MASTER_IP)s:8500
 autorestart=true
 user=root
 stdout_events_enabled = true
