mesos slave finally gets supervisord

--- a/infrastructure/mesos-master/supervisord.conf
+++ b/infrastructure/mesos-master/supervisord.conf
@@ -5,7 +5,7 @@ nodaemon=true
 file=/tmp/supervisor.sock
 
 [inet_http_server]
-port=:9001
+port=0.0.0.0:9001
 
 [supervisorctl]
 serverurl=unix:///tmp/supervisor.sock
