--- a/infrastructure/mesos-slave/supervisord.conf
+++ b/infrastructure/mesos-slave/supervisord.conf
@@ -5,7 +5,7 @@ nodaemon=true
 file=/tmp/supervisor.sock
 
 [inet_http_server]
-port=:9001
+port=0.0.0.0:9002
 
 [supervisorctl]
 serverurl=unix:///tmp/supervisor.sock
@@ -13,15 +13,8 @@ serverurl=unix:///tmp/supervisor.sock
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
-;[program:haproxy]
-;command=/usr/sbin/haproxy -db -f /etc/haproxy/haproxy.cfg
-;autorestart=true
-;user=root
-;stdout_events_enabled = true
-;stderr_events_enabled = true
-
-[program:haproxy_configurator]
-command=./consul-template -template "in.conf:/etc/haproxy/haproxy.cfg:/usr/sbin/haproxy -f /etc/haproxy/haproxy.cfg -sf $(pidof /usr/sbin/haproxy) || true" -consul=%(ENV_MASTER_IP)s:8500
+[program:mesos-slave]
+command=mesos-slave --master=zk://%(ENV_ZOOKEEPER_HOSTS)s/mesos --containerizers=docker,mesos --executor_registration_timeout=5mins --hostname=%(ENV_MASTER_HOST)s
 autorestart=true
 user=root
 stdout_events_enabled = true
