--- a/infrastructure/haproxy/supervisord.conf
+++ b/infrastructure/haproxy/supervisord.conf
@@ -21,7 +21,7 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 ;stderr_events_enabled = true
 
 [program:haproxy_configurator]
-command=./consul-template -template "in.conf:/etc/haproxy/haproxy.cfg:/usr/sbin/haproxy -f /etc/haproxy/haproxy.cfg -sf $(pidof /usr/sbin/haproxy) || true" -consul=%(ENV_MASTER_IP)s:8500
+command=./consul-template -template "in.conf:/etc/haproxy/haproxy.cfg:/usr/sbin/haproxy -f /etc/haproxy/haproxy.cfg -sf $(pidof /usr/sbin/haproxy) >/dev/null || true" -consul=%(ENV_MASTER_IP)s:8500
 autorestart=true
 user=root
 stdout_events_enabled = true
