Lets use hkp and port 80 since port 80 is wide open on proxy

--- a/infrastructure/mesos/Dockerfile
+++ b/infrastructure/mesos/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER Wojciech Sielski "wsielski@team.mobile.de"
 RUN echo "deb http://repos.mesosphere.io/ubuntu/ trusty main" > /etc/apt/sources.list.d/mesosphere.list
 
 #RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv E56151BF
-RUN gpg --keyserver keyserver.ubuntu.com --recv E56151BF && gpg --export --armor E56151BF | apt-key add -
+RUN gpg --keyserver hkp://keyserver.ubuntu.com:80 --recv E56151BF && gpg --export --armor E56151BF | apt-key add -
 
 RUN . /opt/versions.conf \
     && apt-get update \
