--- a/infrastructure/consul/Dockerfile
+++ b/infrastructure/consul/Dockerfile
@@ -17,7 +17,7 @@ RUN . /opt/versions.conf \
 
 RUN echo 'deb http://get.docker.io/ubuntu docker main' > /etc/apt/sources.list.d/docker.list
 #RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv D8576A8BA88D21E9
-RUN gpg --keyserver keyserver.ubuntu.com --recv D8576A8BA88D21E9 && gpg --export --armor D8576A8BA88D21E9 | apt-key add -
+RUN gpg --keyserver  hkp://keyserver.ubuntu.com:80 --recv D8576A8BA88D21E9 && gpg --export --armor D8576A8BA88D21E9 | apt-key add -
 RUN . /opt/versions.conf \
     && apt-get update \
     && apt-get install -y lxc-docker-${DOCKER_VERSION}
