--- a/examples/SimpleWebappPython/simple_webapp_python/Dockerfile
+++ b/examples/SimpleWebappPython/simple_webapp_python/Dockerfile
@@ -4,6 +4,12 @@ FROM paas
 
 MAINTAINER Wojciech Sielski "wsielski@team.mobile.de"
 
+RUN echo 'deb http://get.docker.io/ubuntu docker main' > /etc/apt/sources.list.d/docker.list
+RUN gpg --keyserver  hkp://keyserver.ubuntu.com:80 --recv D8576A8BA88D21E9 && gpg --export --armor D8576A8BA88D21E9 | apt-key add -
+RUN . /opt/versions.conf \
+    && apt-get update \
+    && apt-get install -y lxc-docker-${DOCKER_VERSION}
+
 RUN mkdir -p /opt/web/cgi-bin
 ENV HOME  /opt/web
 WORKDIR /opt/web
