--- a/infrastructure/haproxy/in.conf
+++ b/infrastructure/haproxy/in.conf
@@ -41,10 +41,11 @@ frontend http-in
     acl acl_{{$service}} hdr(host) -i {{$service}}.service.consul
     use_backend backend_{{$service}} if acl_{{$service}}
 {{end}}{{end}}{{end}}
-{{range services}}{{$service:=.Name}}{{range .Tags}}{{if or (eq . "webapp") (eq . "haproxy")}}
-    backend backend_{{$service}}
+{{range services}}{{range $tag, $services := service .Name|byTag}}{{if or (eq $tag "webapp") (eq $tag "haproxy")}}{{$service_name := (index $services 0).Name}}
+    backend backend_{{$service_name}}
       balance leastconn
       option http-server-close
-  {{range service $service "passing" }}    server {{.Name}} {{.Address}}:{{.Port}} maxconn 64
-  {{end}}
+{{range $services}}      server {{.Node}}_{{.Port}} {{.Address}}:{{.Port}} maxconn 32
+{{end}}
 {{end}}{{end}}{{end}}
+
