--- a/infrastructure/paas/Dockerfile
+++ b/infrastructure/paas/Dockerfile
@@ -1,10 +1,11 @@
-FROM ubuntu:14.04
+FROM ubuntu:14.04.2
 
 ENV DEBIAN_FRONTEND noninteractive
 RUN locale-gen en_US.UTF-8
 ENV LANG en_US.UTF-8
 ENV LANGUAGE en_US:en
 ENV LC_ALL en_US.UTF-8
+ENV HOME /root
 
 RUN apt-get update \
     && apt-get install -y \
