--- a/infrastructure/paas/Dockerfile
+++ b/infrastructure/paas/Dockerfile
@@ -5,6 +5,7 @@ RUN locale-gen en_US.UTF-8
 ENV LANG en_US.UTF-8
 ENV LANGUAGE en_US:en
 ENV LC_ALL en_US.UTF-8
+ENV TERM xterm
 ENV HOME /root
 
 RUN apt-get update \
@@ -13,7 +14,9 @@ RUN apt-get update \
       supervisor \
       wget \
       curl \
-      unzip
+      unzip \
+      dnsutils \
+      vim
 
 RUN pip install supervisor-stdout
 
