Gets registrator v5 on board

--- a/infrastructure/paas/versions.conf
+++ b/infrastructure/paas/versions.conf
@@ -7,4 +7,4 @@ ENVCONSUL_VERSION="0.3.0"
 HAPROXY_VERSION="1.5.3-1~ubuntu14.04.1"
 MESOS_VERSION="0.21.1-1.1.ubuntu1404"
 MARATHON_VERSION="0.8.0-1.1.97.ubuntu1404"
-REGISTRATOR_VERSION="0.4.0"
+REGISTRATOR_VERSION="v5"
