New registrator register with local IP, so it need to be overwritten

--- a/infrastructure/registrator/supervisord.conf
+++ b/infrastructure/registrator/supervisord.conf
@@ -14,7 +14,7 @@ serverurl=unix:///tmp/supervisor.sock
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [program:registrator]
-command=registrator consul://%(ENV_CONSUL_IP)s:8500
+command=registrator -ip=%(ENV_CONSUL_IP)s consul://%(ENV_CONSUL_IP)s:8500
 autorestart=true
 user=root
 stdout_events_enabled = true
