--- a/infrastructure/haproxy/supervisord.conf
+++ b/infrastructure/haproxy/supervisord.conf
@@ -13,22 +13,32 @@ serverurl=unix:///tmp/supervisor.sock
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
-;[program:haproxy]
-;command=/usr/sbin/haproxy -db -f /etc/haproxy/haproxy.cfg
-;autorestart=true
-;user=root
-;stdout_events_enabled = true
-;stderr_events_enabled = true
-
-[program:haproxy_configurator]
-command=./consul-template -wait 0.5s -template "in.conf:/etc/haproxy/haproxy.cfg:/usr/sbin/haproxy -f /etc/haproxy/haproxy.cfg -sf $(pidof /usr/sbin/haproxy) >/dev/null || true" -consul=%(ENV_CONSUL_IP)s:8500
+[program:haproxy_watcher]
+command=/opt/consul_template/haproxy_watcher.sh
 autorestart=true
 user=root
 stdout_events_enabled = true
 stderr_events_enabled = true
 
-[eventlistener:stdout] 
-command = supervisor_stdout 
-buffer_size = 100 
-events = PROCESS_LOG 
+; Current workaround for
+; https://github.com/hashicorp/consul-template/issues/198
+;
+[program:consul_template_generator]
+command=./consul-template -wait 0.5s -template "template.conf:haproxy.tmpl:pkill -SIGHUP consul-template" -consul=%(ENV_CONSUL_IP)s:8500
+autorestart=true
+user=root
+stdout_events_enabled = true
+stderr_events_enabled = true
+
+[program:consul_template_haproxy]
+command=./consul-template -wait 0.5s -template "haproxy.tmpl:/etc/haproxy/haproxy.cfg:/usr/sbin/haproxy -p /tmp/haproxy.pid -f /etc/haproxy/haproxy.cfg -sf $(pidof /usr/sbin/haproxy) || true" -consul=%(ENV_CONSUL_IP)s:8500
+autorestart=true
+user=root
+stdout_events_enabled = true
+stderr_events_enabled = true
+
+[eventlistener:stdout]
+command = supervisor_stdout
+buffer_size = 100
+events = PROCESS_LOG
 result_handler = supervisor_stdout:event_handler
